--- a/aggregations.mdx
+++ b/aggregations.mdx
@@ -16,8 +16,8 @@ streaming window aggregate functions.
 ## Windowed Features
 
 Windowed features are features defined over time ranges.
-You can declare a feature to compute with a window function using
-the typeclass `chalk.streams.Windowed`.
+You can declare a feature to compute with a window function using the type class
+`chalk.streams.Windowed`.
 
 ### Example
 
