--- a/branches.mdx
+++ b/branches.mdx
@@ -5,12 +5,12 @@ description: Make rapid changes and explore features with branches.
 
 ---
 
-Branch deployments allow users to quickly iterate on features and datasets.  
+Branch deployments allow users to quickly iterate on features and datasets.
 When working in a branch users have a number of useful capabilities, including:
 
 - Chalk can automatically watch your files and deploy any changes
 - Updates to your project are deployed in seconds
-- Adjust and create features and resolvers inside a JupyterNotebook
+- Adjust and create features and resolvers inside a Jupyter Notebook
 - Quickly `recompute` datasets to see the effects of changes
 - Branches have a consistent name across deployments
 
@@ -18,19 +18,19 @@ When working in a branch users have a number of useful capabilities, including:
 
 ## Create a Branch Deployment
 
-To create a branch, simply run [`chalk apply --branch <branch_name>`](/cli/chalk#branch). Chalk will create a new branch in the environment that you can interact with. Now, you can make queries against your branch with `chalk query --branch`.  
+To create a branch, simply run [`chalk apply --branch <branch_name>`](/cli/chalk#branch). Chalk will create a new branch in the environment that you can interact with. Now, you can make queries against your branch with `chalk query --branch`.
 If you're using the Python API, you can set the branch when creating your [client](/api-docs#ChalkClient), and all subsequent commands will execute against your branch.
 
 ### Continuously Deploy Changes
 
-You can ask the Chalk CLI to continuously deploy changes to your branch using the [`watch`](cli/apply#watch) flag.  
+You can ask the Chalk CLI to continuously deploy changes to your branch using the [`watch`](cli/apply#watch) flag.
 Chalk will automatically keep the branch up to date as you make changes locally.
 
 ---
 
 ## Develop in a Notebook
 
-One of the major advantages of branch deployments is the flexibility they offer when working in notebooks.  
+One of the major advantages of branch deployments is the flexibility they offer when working in notebooks.
 Once you've deployed a branch, you can iteratively edit features and resolvers and see the effects of these updates in a dataset.
 Create a chalk client and set the `branch` parameter equal to your branch. Then, any time you execute a cell that contains a class annotated with `@features` it will automatically be updated in your branch.
 Similarly, executing cells that contain a function annotated with `@online` or `@offline` will automatically deploy the resolver to your branch.
@@ -53,7 +53,7 @@ def new_resolver(name: NewFeatures.name) -> NewFeatures.greeting:
 
 As you adjust features and resolvers, you can iteratively see how your changes affect the your feature values with the [`Dataset.recompute`](/api-docs#Dataset.recompute) method. Just pass any features you want to be re-computed as arguments to the `features` parameter, and Chalk will generate a new Dataset revision using the latest definitions of features and resolvers.
 
-When used in conjunction with the ability to adjust your features and resolvers in the notebook, this tool allows developers and data scientists to rapidly experiement and productionize their work.
+When used in conjunction with the ability to adjust your features and resolvers in the notebook, this tool allows developers and data scientists to rapidly experiment and productionize their work.
 
 ---
 
@@ -83,7 +83,7 @@ shape: (786, 3)
 └───────────────┴──────────────┴─────────────────────────┘
 ```
 
-In our jupyter notebook, we can execute this in a cell to setup our notebook to point to our branch, then update our branch with the new feature and resolver.
+In our Jupyter Notebook, we can execute this in a cell to setup our notebook to point to our branch, then update our branch with the new feature and resolver.
 
 ```python
 client = ChalkClient(branch="<our_branch>")
