--- a/dataframe.mdx
+++ b/dataframe.mdx
@@ -6,7 +6,7 @@ description: Describe and fetch rows of features.
 ---
 
 A Chalk [`DataFrame`](/api-docs#DataFrame) is a 2-dimensional data structure
-similar to `pandas.Dataframe`, but with richer underlying optimizations.
+similar to `pandas.DataFrame`, but with richer underlying optimizations.
 In a Chalk `DataFrame`, the column headers are instances of `chalk.feature`.
 The Chalk `DataFrame` can be used to describe rows of data
 and as a wrapper for returning that data.
