--- a/datasets.mdx
+++ b/datasets.mdx
@@ -52,7 +52,7 @@ queries with the same name, a new [DatasetRevision](/api-docs#DatasetRevision) i
 and attached to the existing dataset.
 If a `dataset_name` is not given, the output data won't be retrievable beyond the current session.
 
-A dataset's revisions can be inspected in `Dataset.revisions`:
+A Dataset's revisions can be inspected in `Dataset.revisions`:
 they hold useful metadata relating to the offline query job and the data itself.
 Be sure to check out `Dataset.errors` for any errors upon submitting the query.
 
