--- a/query-overview.mdx
+++ b/query-overview.mdx
@@ -126,6 +126,6 @@ client.offline_query(
 
 ### Scheduled and Triggered Resolver Run
 
-Specific resolvers can also be [scheduled](/docs/resolver-cron) or [triggered](/docs/runs) (for instance as part of engineering pipelines like airflow).
+Specific resolvers can also be [scheduled](/docs/resolver-cron) or [triggered](/docs/runs) (for instance as part of engineering pipelines like Airflow).
 Specific queries can [also be scheduled](/docs/changelog#scheduled-queries). Functionally, triggers and schedules are effective ways of pulling data from
 "slow" data sources into your offline and online store.
