--- a/aws-codeartifact.mdx
+++ b/aws-codeartifact.mdx
@@ -21,7 +21,7 @@ in your team's settings page. The principal will look like this:
 arn:aws:iam::***********:role/chalk-*********
 ```
 
-Once you have the IAM prinicpal ARN, you will need to grant the following permissions to the principal:
+Once you have the IAM principal ARN, you will need to grant the following permissions to the principal:
 
 ```
 codeartifact:DescribePackageVersion
