--- a/on-prem-gcp.mdx
+++ b/on-prem-gcp.mdx
@@ -23,9 +23,9 @@ resources that must be provisioned.
 
 ## Major Components
 
-- **Chalk API Server** -- this is a simple API server that manages oauth token exchange, SSO, and controls deployments to the Chalk Compute Cluster.
+- **Chalk API Server** -- this is a simple API server that manages OAuth token exchange, SSO, and controls deployments to the Chalk Compute Cluster.
 - **Chalk Metadata Database** -- this is a Postgres database that is used to store relatively low-volume metadata about objects that Chalk manages (deployments, feature definitions, system users, etc).
-- **Chalk Compute Cluster** -- Kubernetes deployments, statefulsets, and other resources that perform feature derivation and serve feature queries.
+- **Chalk Compute Cluster** -- Kubernetes deployments, StatefulSets, and other resources that perform feature derivation and serve feature queries.
 - **Online Storage** -- a low-latency data store that is used to serve cached features for online queries. On GCP, Chalk supports [Memorystore](https://cloud.google.com/memorystore), [Bigtable](https://cloud.google.com/bigtable), or Postgres 15 (via [Cloud SQL](https://cloud.google.com/sql/docs/postgres) or otherwise). These options have different performance characteristics, and we will help you make the right choice for your use case.
 - **Offline Storage** -- a data warehouse that is used to store historical feature data for offline analysis and training set generation. On GCP, Chalk supports [Bigquery](https://cloud.google.com/bigquery).
 - **Docker Image Storage** -- Chalk requires a Docker image registry to store images for the Chalk Compute Cluster. On Google Cloud, we recommend [Google Artifact Registry](https://cloud.google.com/artifact-registry).
@@ -36,8 +36,11 @@ resources that must be provisioned.
 - **Kubernetes Cluster**: On Google Cloud, Chalk supports [Google Kubernetes Engine](https://cloud.google.com/kubernetes-engine) in Autopilot or Standard modes. Chalk requires at least one Kubernetes namespace per Chalk Environment.
 - **BigQuery Datasets**: Chalk requires one BigQuery dataset per Chalk Environment for offline feature storage.
 - **Online Store**: Chalk requires the cloud resources for at least one of the supported online storage options to be provisioned.
-- **Google Secret Manager**: Chalk requires access to [Google Secret Manager](https://cloud.google.com/secret-manager) to store user-provided datasource credentials that are used by the Chalk Compute Cluster to communicate with your underlying datasources.
-- **Google Pubsub**: Chalk uses [Google Pubsub](https://cloud.google.com/pubsub) in order to persist data from the compute server to online and offline storage.
+- **Google Secret Manager**: Chalk requires access to [Google Secret
+Manager](https://cloud.google.com/secret-manager) to store user-provided data source credentials
+that are used by the Chalk Compute Cluster to communicate with your underlying data sources.
+- **Google Pub/Sub**: Chalk uses [Google Pub/Sub](https://cloud.google.com/pubsub) in order to
+persist data from the compute server to online and offline storage.
 - **Google Cloud Scheduler**: Chalk uses [Google Cloud Scheduler](https://cloud.google.com/scheduler) in order to coordinate offline feature derivation jobs.
 - **Google Cloud Build**: Chalk uses [Google Gloud Build](https://cloud.google.com/build) in order to construct Docker images containing your feature engineering pipelines.
 - **Google Cloud Storage**: Chalk uses [Google Cloud Storage](https://cloud.google.com/storage) to store computed datasets and for bulk upload jobs into the BigQuery offline store.
