--- a/resolver-outputs.mdx
+++ b/resolver-outputs.mdx
@@ -152,8 +152,9 @@ def get_all_users() -> DataFrame[User]:
 
 ### Other DataFrame-returning resolvers
 
-Imagine a scalar feature you'd like to backfill over many thousands of pkeys and historical times.
-`DataFrame`-returning resolvers can dramatically reduce the computation time due to its vectorized handling.
+Imagine a scalar feature you'd like to backfill over many thousands of primary keys and historical
+times. `DataFrame`-returning resolvers can dramatically reduce the computation time due to its
+vectorized handling.
 
 ```py
 @offline
