--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -17,8 +17,8 @@ your data goals.
 
 ## Creating your Chalk Project
 
-1. If you don't already have a Github repository where you will store your Chalk code, create one. Then, pick a
-local directory in which to work on Chalk code, and clone the Github repository there. Then `cd` inside of the
+1. If you don't already have a GitHub repository where you will store your Chalk code, create one. Then, pick a
+local directory in which to work on Chalk code, and clone the GitHub repository there. Then `cd` inside of the
 directory.
 2. If you haven't already, install Python. You can do this through [Homebrew](https://brew.sh/) as follows:
 ```bash Terminal
@@ -76,18 +76,17 @@ $ pip3 install -r requirements.txt
 Now, you should have a virtual environment with all project dependencies installed and a basic project structure upon
 which we will build in the next step.
 
-## Configure Datasources
+## Configure Data Sources
 
 Having set up a basic project directory, next we'll want to configure the data sources from which we will load data to
 compute our features. We can do so in the Chalk dashboard.
 
-1. In the same directory from before, login or signup with Chalk directly from the command line. The
-[`chalk login`](https://docs.chalk.ai/cli/login) command will open your browser and create an
+1. In the same directory from before, login or sign up with Chalk directly from the command line.
+   The [`chalk login`](https://docs.chalk.ai/cli/login) command will open your browser and create an
 API token for your local development, as well as redirect you to your dashboard. If you are not
 redirected you can also find the dashboard at [https://chalk.ai/projects](https://chalk.ai/projects)
-or run the `chalk dashboard` command.
-You will automatically see all of the environments in which the email you used to login has been
-provisioned as a user.
+or run the `chalk dashboard` command. You will automatically see all of the environments in which
+the email you used to login has been provisioned as a user.
  2. Within the dashboard, navigate to `Data Sources` in the side bar and add all data sources that you will
 be working with here. After you have saved a data source, you can use the `Test Data Source` button
 in the upper right hand corner of the Data Source configuration view to verify that your connection is
