--- a/snowflake-deployment.mdx
+++ b/snowflake-deployment.mdx
@@ -87,7 +87,7 @@ Please share:
 
 - The `USER_NAME` and `PASSWORD` with us securely via an encrypted message following [using GPG](/docs/public-key).
 - The `WAREHOUSE_NAME`, `DB_NAME`, `SCHEMA_NAME`, and `ROLE_NAME` so that we can configure the Chalk platform to use them.
-- Your Snowflake account name (`select current_account_name();`) and organziation name (`select current_organization_name();`).
+- Your Snowflake account name (`select current_account_name();`) and organization name (`select current_organization_name();`).
 
 
 ## Storage Integration Setup
