--- a/training-client.mdx
+++ b/training-client.mdx
@@ -102,7 +102,7 @@ Users can request that certain features be recomputed by resolvers
 at query time instead of sampled from the offline store.
 For more information, read [here](/api-docs#ChalkClient.offline_query.recompute_features).
 
-### Timebounds
+### Time Bounds
 
 In some cases, users may not have a list of primary keys to sample with,
 and instead would like to see results within a period of time.
