--- a/sql.mdx
+++ b/sql.mdx
@@ -149,7 +149,7 @@ The following are supported keys to be included in `.chalk.sql` file comments.
 
 ### Proper comment formatting
 
-All comments must be inserted before the body of the sql query. Each comment line is parsed as
+All comments must be inserted before the body of the SQL query. Each comment line is parsed as
 either a yaml-formatted line describing the resolver or a docstring. Below, the last comment
 will appear as a docstring since it is not in `key:value` format.
 
@@ -305,10 +305,10 @@ pg.query_string(
 
 ### Python resolvers with SQL Sources (.sql files)
 
-Finally, if you want to join your sql files with Python resolvers,
+Finally, if you want to join your SQL files with Python resolvers,
 you can use the `query_sql_file` function.
 
-For example, if you have a sql query defined in `query.sql`:
+For example, if you have a SQL query defined in `query.sql`:
 
 ```sql query.sql
 select * from users where user_id=:user_id
@@ -563,7 +563,7 @@ behavior more precisely.
 
 ## Tagged SQL sources
 
-Chalk supports applying [tags](/docs/resolver-tags) to sql sources. This allows you to define a single resolver that routes traffic
+Chalk supports applying [tags](/docs/resolver-tags) to SQL sources. This allows you to define a single resolver that routes traffic
 to multiple different backing databases depending on tags supplied at query time. This is useful for limiting
 the blast-radius of traffic from different use-cases.
 
@@ -590,18 +590,17 @@ def users() -> DataFrame[User]:
     return sql_group.query_string("select id, name from users").all()
 ```
 
-Then, when you submit queries, the query tags will control which datasource is used to execute the query:
+Then, when you submit queries, the query tags will control which data source is used to execute the
+query:
 
 ```py
 c = ChalkClient()
 
-# This query uses the risk datasource
-c.query(input={User.id: 1}, output=[User.name], tags=['risk'])
+# This query uses the risk data source c.query(input={User.id: 1}, output=[User.name],
+tags=['risk'])
 
-# This query uses the analytics datasource
+# This query uses the analytics data source
 
 c.query(input={User.id: 1}, output=[User.name], tags=['analytics'])
 
-# This query uses the default datasource
-c.query(input={User.id: 1}, output=[User.name])
-```
+# This query uses the default data source c.query(input={User.id: 1}, output=[User.name]) ```
